updated search